# wds-openqwen

./: .gitignore  README.md  datology_pretrain_launcher.sh  finetune_launcher.sh  prepare_vlm_eval_data.sh  pretrain_launcher.sh  pyproject.toml  run_mammoth_split.sbatch  s3_parallel_download_to_fsx.sbatch  untar_batched_pigz.sbatch
data_prepare/: split_mammoth_10m.py
llava/model/: __init__.py  llava_arch.py
llava/model/language_model/: llava_llama.py
mm_sequence_packing/: __init__.py  multiprocess_sequence_packing_image_to_pil.sh  sequence_packing_image_to_pil.py
prismatic-vlms/: datology_train.sh  fine_tune.sh  fine_tune_mammoth.sh  train.sh
prismatic-vlms/prismatic/conf/: datasets.py
prismatic-vlms/prismatic/models/vlms/: prismatic.py
prismatic-vlms/prismatic/preprocessing/: materialize.py  preprocess_ocrvqa.py
prismatic-vlms/prismatic/preprocessing/datasets/: __init__.py  datasets.py  wds_dataset.py  wds_dynamic_packing.py  wds_dynamic_packing_datology.py
prismatic-vlms/prismatic/training/strategies/: base_strategy.py  fsdp.py
prismatic-vlms/prismatic/util/: data_utils.py
prismatic-vlms/scripts/: pretrain.py
results/: qwen_vlm_dp_accuracy_results.csv
results/ai2d/ai2d-full/qwen_vlm_dp/: results+rank-0.json  results+rank-1.json  results+rank-2.json  results+rank-3.json  results+rank-4.json  results+rank-5.json  results+rank-6.json  results+rank-7.json
results/mathvista/mathvista-full/qwen_vlm_dp/: full-results.json  mathvista-formatted-predictions.json  metrics.json  results+rank-0.json  results+rank-1.json  results+rank-2.json  results+rank-3.json  results+rank-4.json  results+rank-5.json  results+rank-6.json  results+rank-7.json
results/mmbench/mmbench-full/qwen_vlm_dp/: full-results.json  metrics.json  mmbench-formatted-predictions.json  results+rank-0.json  results+rank-1.json  results+rank-2.json  results+rank-3.json  results+rank-4.json  results+rank-5.json  results+rank-6.json  results+rank-7.json
results/mmmu/mmmu-full/qwen_vlm_dp/: full-results.json  metrics.json  mmmu-formatted-predictions.json  results+rank-0.json  results+rank-1.json  results+rank-2.json  results+rank-3.json  results+rank-4.json  results+rank-5.json  results+rank-6.json  results+rank-7.json
results/mmstar/mmstar-full/qwen_vlm_dp/: full-results.json  metrics.json  mmstar-formatted-predictions.json  results+rank-0.json  results+rank-1.json  results+rank-2.json  results+rank-3.json  results+rank-4.json  results+rank-5.json  results+rank-6.json  results+rank-7.json
results/pope/pope-full/qwen_vlm_dp/: metrics.json  results+rank-0.json  results+rank-1.json  results+rank-2.json  results+rank-3.json  results+rank-4.json  results+rank-5.json  results+rank-6.json  results+rank-7.json
results/seedbench/seedbench-full/qwen_vlm_dp/: results+rank-0.json  (+8 more)
vlm-evaluation/: eval.sh  eval_launcher.sh  pyproject.toml
vlm-evaluation/scripts/: collect_scores.py  evaluate.py
vlm-evaluation/scripts/datasets/: prepare.py
vlm-evaluation/vlm_eval/tasks/: download.py
(+12 files in other folders)
